MDEV-13435 Crash when selecting virtual columns generated using JSON functions

don't allocate memory on thd->mem_root in every fix_fields(),
do it once and reuse.